// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeESQuery @type should return a must clause with a term query for both _deprecated and @types 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "@type": "myType",
          },
        },
        Object {
          "term": Object {
            "_deprecated": true,
          },
        },
      ],
      "must_not": Array [
        Object {
          "bool": Object {
            "should": Array [
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/resolver.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/storage.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/view.json",
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeESQuery _constrainedBy should return a must clause with a term query for both _deprecated and _constrainedBy 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_constrainedBy": "mySchema",
          },
        },
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
      ],
      "must_not": Array [
        Object {
          "bool": Object {
            "should": Array [
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/resolver.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/storage.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/view.json",
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeESQuery deprecated should return a must clause with just the term query 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
      ],
      "must_not": Array [
        Object {
          "bool": Object {
            "should": Array [
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/resolver.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/storage.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/view.json",
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeESQuery everything at once should return a must clause with the kitchen sink 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "@type": "myType",
          },
        },
        Object {
          "term": Object {
            "_constrainedBy": "mySchemas",
          },
        },
        Object {
          "term": Object {
            "_deprecated": true,
          },
        },
        Object {
          "query_string": Object {
            "query": "Banana~",
          },
        },
      ],
      "must_not": Array [
        Object {
          "bool": Object {
            "should": Array [
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/resolver.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/storage.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/view.json",
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeESQuery text query should return a must clause with a query string 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
        Object {
          "query_string": Object {
            "query": "banana~",
          },
        },
      ],
      "must_not": Array [
        Object {
          "bool": Object {
            "should": Array [
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/resolver.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/storage.json",
                },
              },
              Object {
                "term": Object {
                  "_constrainedBy": "https://bluebrain.github.io/nexus/schemas/view.json",
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;
